[gd_scene load_steps=42 format=2]

[ext_resource path="res://Player/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boss/Boss.gd" type="Script" id=2]
[ext_resource path="res://Enemy1/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boss/GiantFrog/Jump.png" type="Texture" id=4]
[ext_resource path="res://Player/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Boss/GiantFrog/Attack.png" type="Texture" id=9]
[ext_resource path="res://Boss/GiantFrog/Charge.png" type="Texture" id=10]
[ext_resource path="res://Boss/GiantFrog/Hit.png" type="Texture" id=11]
[ext_resource path="res://Boss/GiantFrog/Idle40x40.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 12 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "FrogHit",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "FrogJump",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "FrogAttack",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "FrogIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "FrogCharge",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=21]
height = 32.1193

[sub_resource type="CircleShape2D" id=22]
radius = 12.9776

[sub_resource type="CircleShape2D" id=23]
radius = 16.5185

[sub_resource type="CircleShape2D" id=24]
radius = 92.5791

[sub_resource type="CircleShape2D" id=25]
radius = 5.71457

[node name="FrogSummoner" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "FrogIdle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.49012e-08, 8.93644 )
rotation = 1.57954
scale = Vector2( 0.475288, 0.63073 )
shape = SubResource( 21 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.093647, 1.35642 )
scale = Vector2( 1, 0.839999 )
shape = SubResource( 22 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 1.11362 )
scale = Vector2( 0.76189, 0.652065 )
shape = SubResource( 23 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 2.13679, 2.13679 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 24 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 1.19262 )
scale = Vector2( 2.4, 2.04 )
shape = SubResource( 25 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
maxHealth = 6

[node name="SummonTimer" type="Timer" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibilityStarted" from="Hurtbox" to="." method="_on_Hurtbox_invincibilityStarted"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]
[connection signal="timeout" from="SummonTimer" to="." method="_on_SummonTimer_timeout"]

[editable path="Hurtbox"]

[editable path="SoftCollision"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
